--- a/_posts/2020-09-23-how-to-use.md
+++ b/_posts/2020-09-23-how-to-use.md
@@ -5,24 +5,34 @@ title: "[Explanation] 기술 블로그 포스트 작성 요령"
 Tech post는 **[Tutorial]**, **[How-to]**, **[Explanation]**, **[Technical reference]** 중 하나에 속해야 하며 그에 적절한 구성으로 작성되어야 합니다. 작성된 포스트가 어떤 속성을 가지는지 명시적으로 표시하기 위해, 제목 앞에 위 4가지 중 하나를 표시하도록 합니다.
 # 튜토리얼 [Tutorial]:
    튜토리얼은 독자에게 새로운 기술을 바로 적용할 수 있도록 도움을 주는 문서입니다. 문서의 주제에 대해 지식이 없는 독자를 초보적인 단계까지 이끌 수 있도록 구성되어야 합니다.  
-	 설명하고자하는 주제가 프로그래밍 중급자나 특정 기술에 익숙한 것을 전제하고 있을 수 있습니다. 아무것도 모르는 일반인에게 복잡한 시스템 아키텍쳐에 대해 설명하는 것은, 아무리 튜토리얼이 제공된다고 하더라도 큰 어려움이 따를 것입니다. 튜토리얼은 저숙련자가 읽을 수 있는 첫번째 문서이므로, 튜토리얼의 헤더에 아래와 같은 정보를 포함하여 독자의 타겟을 지정합니다. 독자의 지식 수준을 어느 수준 이상으로 한정함으로써, 이후의 문서에서 지나치게 초보적인 설명을 생략하고 전달하고자 하는 정보에 보다 집중할 수 있게 됩니다.
+	 설명하고자하는 주제에는 기본적인 지식이 요구될 수 있습니다. 아무것도 모르는 일반인에게 복잡한 시스템 아키텍쳐에 대해 설명하는 것은, 아무리 튜토리얼이 제공된다고 하더라도 큰 어려움이 따를 것입니다. 튜토리얼은 저숙련자가 읽을 수 있는 첫번째 문서이므로, **튜토리얼의 헤더**에 아래와 같은 정보를 포함하여 독자의 타겟을 지정합니다. 독자의 지식 수준을 어느 수준 이상으로 한정함으로써, 이후의 문서에서 지나치게 초보적인 설명을 생략하고 전달하고자 하는 정보에 보다 집중할 수 있게 됩니다.
 	 
 ```
 Requires: <지식1>, <지식2>, <지식3>
 ```
+
+여기서 요구하는 기본 지식은 튜토리얼에서 소개하고자 하는 내용은 제외되어야 합니다. 튜토리얼은 주제에 대한 지식이 없는 독자가 읽을 문서임을 기억하십시오.
 	 
-튜토리얼의 서문에는 주제에 대한 필요성과 해결 방법에 대해 5줄 내외로 간략하게 제시합니다. 서론을 길게 작성하면 안 됩니다. 구질구질한 배경 히스토리나 소프트웨어의 장점과 한계점 등은 설명서 문서에서 책임져야 합니다. 이 문서의 목적은 어디까지나 아무것도 모르는 사람을 '초보자'로 레벨업시켜 다른 문서를 이해할 수 있는 위치로 끌어올리는  것입니다. 
+튜토리얼의 서문에는 **주제에 대한 필요성과 해결 방법**에 대해 5줄 내외로 간략하게 제시합니다. 서론을 길게 작성하면 안 됩니다. 구질구질한 배경 히스토리나 소프트웨어의 장점과 한계점 등은 설명서 문서에서 책임져야 합니다. 이 문서의 목적은 어디까지나 아무것도 모르는 사람을 '초보자'로 레벨업시켜 다른 문서를 이해할 수 있는 위치로 끌어올리는  것입니다. 
 
-튜토리얼은 주제에 대해 자세히 배우는 것이 아니라 그것을 통해 무언가를 이루는 방법을 배우는 데에 중점을 둡니다. 이를 위해 문서는 전체적으로 학습지향적이어야 하며, 주제의 특징을 잘 드러낼 수 있는 하나 이상의 학습 목표가 선정되어야 합니다. 학습자가 목표를 달성하기 위해 문서를 따라가면서 중요한 것이 무엇이고 어떻게 다루어야 하는지 경험해볼 수 있으면 충분합니다. 그것이 올바르지 않은 방법이어도 괜찮습니다.  '경험자라면 시도할 수 있는 다른 방법'이나 '참고 자료', '팁' 등은 튜토리얼에 포함하지 않습니다. 이것은 초보자가 걸음마를 시작하는데 방해가 되며, 튜토리얼보다 다른 문서에서 다루기 적합합니다. 정확한 행동을 지시해야 하며, 결과는 구체적이어야 합니다. 원론적인 이야기나 추상적인 내용을 소개하면 안 됩니다. 학습자가 구체적인 내용에 대해 충분히 곱씹어 볼 기회를 갖기 전에 추상적인 이론을 설파하지 않도록 합니다. 초보자에게 그것은 방해물에 불과합니다. 최소한의 설명이 적당합니다. 
+튜토리얼은 주제에 대해 자세히 배우는 것이 아니라 그것을 통해 무언가를 이루는 방법을 배우는 데에 중점을 둡니다. 이를 위해 문서는 전체적으로 **학습지향적**이어야 하며, 주제의 특징을 잘 드러낼 수 있는 하나 이상의 **학습 목표**가 선정되어야 합니다. 학습자가 목표를 달성하기 위해 문서를 따라가면서 중요한 것이 무엇이고 어떻게 다루어야 하는지 경험해볼 수 있으면 충분합니다. 그것이 실용적이지 않거나 올바르지 않은 방법이어도 괜찮습니다.  '경험자라면 시도할 수 있는 다른 방법'이나 '참고 자료', '팁' 등은 튜토리얼에 포함하지 않습니다. 이것은 초보자가 걸음마를 시작하는데 방해가 되며, 튜토리얼보다 다른 문서에서 다루기 적합합니다. 정확한 행동을 지시해야 하며, 결과는 구체적이어야 합니다. 원론적인 이야기나 추상적인 내용을 소개하면 안 됩니다. 학습자가 구체적인 내용에 대해 충분히 곱씹어 볼 기회를 갖기 전에 추상적인 이론을 설파하지 않도록 합니다. 초보자에게 그것은 방해물에 불과합니다. 최소한의 설명이 적당합니다. 
 
-튜토리얼은 반드시 잘 작동해야 합니다. 튜토리얼은 초보자에게 자신감을 부여해야 하며, 주제에 대해 어려운 선입관을 갖거나 진입장벽이 되어서는 안 됩니다. 학습자가 제대로 따라왔음에도 불구하고 이상한 결과나 오류가 발생하지 않도록 주의를 기울이도록 합니다.
+튜토리얼은 **반드시 잘 작동**해야 합니다. 튜토리얼은 초보자에게 자신감을 부여해야 하며, 주제에 대해 어려운 선입관을 갖거나 진입장벽이 되어서는 안 됩니다. 학습자가 제대로 따라왔음에도 불구하고 이상한 결과나 오류가 발생하지 않도록 주의를 기울이도록 합니다.
 
-학습자는 튜토리얼의 저자가 제시하는 절차를 단계별로 진행합니다. 각 단계는 학습자가 이해할 수 있는 범위 내에서 무엇을 달성하는 것이어야 합니다. 현 단계의 의미와 단계 사이의 연관성을 독자가 이해할 수 있어야 합니다. 이를 위해, 저자가 시킨 대로 학습자가 따라왔을 때, 학습자로 하여금 학습자가 실행한 행동의 효과와 자신이 제대로 따라가고 있음을 즉각 확인할 수 있도록 각 단계마다 확인할 수 있는 절차를 삽입하는 것이 좋습니다.  설명은 현재 단계에만 집중해야 합니다. 지금 소개하고 있는 명령이 여러 옵션을 가질 수 있습니다. 지금 학습자가 실행하는데 필요한 것이 아니라면, 그런 설명은 모두 생략합니다.
+학습자는 **튜토리얼의 저자가 제시하는 절차를 단계별로 진행**합니다. 각 단계는 학습자가 이해할 수 있는 범위 내에서 무엇을 달성하는 것이어야 합니다. 현 단계의 의미와 단계 사이의 연관성을 독자가 이해할 수 있어야 합니다. 이를 위해, 저자가 시킨 대로 학습자가 따라왔을 때, 학습자로 하여금 학습자가 실행한 행동의 효과와 자신이 제대로 따라가고 있음을 즉각 확인할 수 있도록 **각 단계마다 확인할 수 있는 절차**를 삽입하는 것이 좋습니다.  설명은 현재 단계에만 집중해야 합니다. 지금 소개하고 있는 명령이 여러 옵션을 가질 수 있습니다. 지금 학습자가 실행하는데 필요한 것이 아니라면, 그런 설명은 모두 생략합니다.
 
 어떤 기술에 대해 설명하든, 튜토리얼 문서로부터 시작하는 것을 권장합니다. 튜토리얼이 없으면 새로운 사용자가 프로젝트에 적응하는 데 어려움이 따릅니다.  
 	 
 #  하우-투 가이드 [How-to]:
-   하우-투 가이드는 특정한 문제를 해결하는 방법을 보여주는 문서입니다. 
+   하우-투 가이드는 **특정한 문제를 해결하는 방법**을 보여주는 문서입니다.  명확한 목표를 설정하고 그것을 달성하는 과정을 기술합니다.  이 글의 제목은 목표를 알기 쉽게 지정되어야 합니다.  '~을 하는 방법' 과 같은 제목이 적절합니다. 
+	 
+하우-투 가이드의 독자는 과정을 따라가는데 필요한 **기본적인 지식과 환경을 갖추었을 것으로 간주**할 수 있습니다.  설치방법 등 튜토리얼에서 설명해야 할 초보적인 내용은 생략합니다. 하우-투 가이드 문서는 해당 기술을 어느정도 사용할 수 있는 사용자가 질문을 갖게 되었을 때 그것을 해소할 수 있도록 하는 것이 목적입니다. 독자는 어느정도 뚜렷한 목표가 있지만 목표를 달성하기 위한 방법을 모르는 상태입니다. 이것이 튜토리얼과의 차이점입니다.
+
+하우-투 가이드는 튜토리얼과 마찬가지로 목표를 달성하는 절차를 단계별로 진행합니다.  하지만 하우-투 가이드의 목표는 튜토리얼과는 달리 반드시 실용적이어야 합니다. 
+
+튜토리얼과 마찬가지로, 하우-투 가이드는 설명을 최소화합니다. 하지만 어느정도 **유연성이 허용**됩니다. 이것은 너무 특정한 상황에만 유효한 문서가 되는 것을 피하기 위함입니다.  다른 시스템이나 환경 등 비슷하지만 다른 케이스에는 어떻게 적용되는지, 최적화를 위한 팁 등은 괜찮습니다. 그리고 이러한 유연성이 허용되기 때문에, 다양한 케이스를 저자가 모두 테스트해볼 수 없는 관계로 기술된 모든 것이 반드시 잘 작동함을 보장할 필요는 없습니다. 
+
+하우 투 가이드에서 알고 있는 모든 것을 설명하려고 하지 마세요. 주제와 관련 있는 모든 것을 언급할 필요는 없습니다. 너무 방대하고 다양한 방법을 제시하는 하우-투 가이드는 독자에게 어떤 길로 가야하는지 혼란을 줄 뿐입니다. 
 	 
 #  설명서 [Explanation]:
    설명서는 독자에게 어떤 기술이나 소프트웨어에 대한 이해를 목적으로 합니다. 자세한 배경 지식과 맥락, 다른 것과의 비교 등 정보를 전달하는 문서입니다.
