--- a/_posts/2020-09-23-how-to-use.md
+++ b/_posts/2020-09-23-how-to-use.md
@@ -4,7 +4,7 @@ title: "[Explanation] 기술 블로그 포스트 작성 요령"
 
 Tech post는 **[Tutorial]**, **[How-to]**, **[Explanation]**, **[Technical reference]** 중 하나에 속해야 하며 그에 적절한 구성으로 작성되어야 합니다. 작성된 포스트가 어떤 속성을 가지는지 명시적으로 표시하기 위해, 제목 앞에 위 4가지 중 하나를 표시하도록 합니다.
 
-![](./assets/img/how-to-use_img1.png)
+![img1](/assets/img/how-to-use_img1.png)
 # 튜토리얼 [Tutorial]:
    튜토리얼은 독자에게 새로운 기술을 바로 적용할 수 있도록 도움을 주는 문서입니다. 문서의 주제에 대해 지식이 없는 독자를 초보적인 단계까지 이끌 수 있도록 구성되어야 합니다.  
 	 설명하고자하는 주제에는 기본적인 지식이 요구될 수 있습니다. 아무것도 모르는 일반인에게 복잡한 시스템 아키텍쳐에 대해 설명하는 것은, 아무리 튜토리얼이 제공된다고 하더라도 큰 어려움이 따를 것입니다. 튜토리얼은 저숙련자가 읽을 수 있는 첫번째 문서이므로, **튜토리얼의 헤더**에 아래와 같은 정보를 포함하여 독자의 타겟을 지정합니다. 독자의 지식 수준을 어느 수준 이상으로 한정함으로써, 이후의 문서에서 지나치게 초보적인 설명을 생략하고 전달하고자 하는 정보에 보다 집중할 수 있게 됩니다.
