--- a/_posts/2020-09-22-how-to-use.md
+++ b/_posts/2020-09-22-how-to-use.md
@@ -9,3 +9,37 @@ tags: post
 ```
 Requires: 없음
 ```
+
+# 블로그에 새로운 포스트를 작성하는 방법
+Tech 블로그에 새로운 포스팅을 작성하여 업로드하는 방법을 다루겠습니다. 
+
+1. GitHub에 로그인하고 [본 블로그의 git repository](https://github.com/GCGenome-LIMS/gcgenome-lims.github.io/)로 이동합니다.
+
+2. _post 를 클릭하여 _post 디렉토리로 이동한 다음, Add file -> Create new file을 누릅니다.
+
+3. 포스트 파일 이름과 포스팅 내용을 입력합니다. 파일명은 'yyyy-MM-dd-blahblah'의 형태로, [숫자, 영문소문자, 대시(-)] 만을 사용하여 작성합니다.
+포스트 컨텐츠는 Markdown 포맷을 지원합니다. 자세한 문법은 [본 블로그 github 홈](https://github.com/sayaya1090/gcgenome-lims.github.io)나 [GitHub Markdown 가이드](https://guides.github.com/features/mastering-markdown/)를 참고하시기 바랍니다.
+
+4. Propose new file 버튼을 클릭하여 포스트를 저장합니다. 파일을 저장하면 repository에 push됩니다.
+
+5. push가 완료되면 자동으로 블로그가 빌드됩니다. 
+   빌드가 완료되면 아래 이미지와 같이 체크 이미지가 활성화됩니다.
+   
+6. 잠시 뒤 블로그에 접속하면 아래와 같이 생성한 포스트를 확인할 수 있습니다.
+
+ 
+# 블로그에 이미지를 추가하는 방법
+본 블로그 사이트에 이미지를 추가하는 방법을 설명합니다.
+
+1. {업로드할 포스트 제목}-{이미지태그}를 이름으로 하는 이미지 파일을 준비합니다.
+```
+예) 2020-09-23-posting-img1.png, 2020-09-23-posting-img2.png, 2020-09-23-posting-img5.png
+```
+
+2. [블로그 git repository](https://github.com/GCGenome-LIMS/gcgenome-lims.github.io/)로 이동합니다.
+
+3. assets, img를 순서대로 클릭하여 img 디렉토리로 이동한 다음, Add file -> Upload files를 누릅니다.
+
+4. 이미지 파일을 Drag&Drop 하여 업로드하고 Commit합니다.
+
+5. 이미지가 업로드가 완료되었으면, 포스트
